--- a/Artalk.Xmpp/Artalk.Xmpp.csproj
+++ b/Artalk.Xmpp/Artalk.Xmpp.csproj
@@ -5,16 +5,17 @@
     <Authors>Arad ITC</Authors>
     <Company>Arad ITC</Company>
     <Description>A dotnet frame work 4.8, .net core 3.1 &amp; .net 5 library for communicating with an XMPP server</Description>
-    <Copyright>Copyright © AradITC 20201</Copyright>
+    <Copyright>Copyright © AradITC 2021</Copyright>
     <PackageProjectUrl>https://github.com/araditc/Artalk.Xmpp</PackageProjectUrl>
     <PackageIcon>arad-Logo.png</PackageIcon>
-    <Version>1.0.2</Version>
-    <AssemblyVersion>1.0.2.0</AssemblyVersion>
+    <Version>1.0.3</Version>
+    <AssemblyVersion>1.0.3.0</AssemblyVersion>
     <Product>Artalk.Xmpp</Product>
     <PackageId>Artalk.Xmpp</PackageId>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AssemblyName>Artalk.Xmpp</AssemblyName>
     <RootNamespace>Artalk.Xmpp</RootNamespace>
+    <PackageReleaseNotes>Add XEP-0049</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
